Github Sample Commit check

--- a/Advertising_Analytics.ipynb
+++ b/Advertising_Analytics.ipynb
@@ -223,7 +223,8 @@
         }
       ],
       "source": [
-        "data.head(5)"
+        "data.head(5)\n",
+        "data.tail(5)"
       ]
     },
     {
